FIXED: scrub random Set/Map iteration order from observable code paths
Four spots where the internal collection's iteration order leaked into
externally-observable behaviour (exception "primary" picks, @PreDestroy
dispatch order, commit/rollback flush sequence):

  - TransactionScopedEmHolder.currentFramePersistenceUnits() returned
    Set.copyOf(linkedHashSet). Set.copyOf re-buckets into the JDK's
    ImmutableCollections.SetN, whose iteration is hash-based — so the
    strategy iterated the joined PUs in a different order each run.
    Now wraps Collections.unmodifiableSet(new LinkedHashSet<>(...)) so
    join order is preserved through the public surface.
  - TransactionScopedContext.activate() pushed `new HashMap<>()` onto
    its per-tx bean-store deque; deactivate() iterated frame.entrySet()
    for @PreDestroy dispatch + exception aggregation. Switched to
    LinkedHashMap so creation order = destruction order.
  - EmfCache.closeAll() iterated CACHE.entrySet() (ConcurrentHashMap,
    unspecified order) for the JVM-shutdown / launcher-session-close
    EMF close path. Now sorts persistence-unit names alphabetically
    before iterating, so the "first failure becomes primary" rule
    picks the same PU across runs.
  - ScopeStore.destroyAll() (scope-module) iterated snapshot.entrySet()
    (ConcurrentHashMap) for @TestClassScoped / @TestMethodScoped bean
    @PreDestroy dispatch. Now sorts entries by Contextual class FQN
    before iterating so callback dispatch + the primary-thrown rule
    are stable across runs.

Audit also covered: JpaActivePersistenceUnits (already LinkedHashSet),
XbeanFinderEntityScanner.scan (already LinkedHashSet),
JpaConfig.protectedPackages / vendorVetoAllowlist (already LinkedHashSet
via splitCsvToOrderedSet), NativeSqlDeleteDbCleanupStrategy (byName is
LinkedHashMap, fkColumnsBySeq / referencedColumnsBySeq are TreeMap),
ReadOnlyInterceptor.originalFlushModes (already LinkedHashMap),
TransactionScopedEmHolder.STACKS (HashMap but only